Fix sizing of input sliders on mobile

--- a/src/app/image/editor/editor.component.scss
+++ b/src/app/image/editor/editor.component.scss
@@ -5,6 +5,10 @@
         height: auto;
         margin: 2rem;
     }
+
+    .filter-input {
+        width: 50%
+    }
 }
 
 #canvas {
@@ -17,8 +21,9 @@
     display: none;
 }
 
-.bottom-margin {
-    margin: 3rem;
+.container {
+    margin-top: 2rem;
+    margin-bottom: 3rem;
 }
 
 #downloader {
